# ikon-monitor

./: .dockerignore  .gitignore  Dockerfile  cleaner.py  keywords.py  main.py  pyproject.toml  railway.toml  requirements.txt  reviewer.py  scraper.py
config/: settings.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Articles.jsx  ForceGraph.jsx  Terminal.jsx  api.js  index.css  terminalUtils.js
ikon/: __init__.py  cli.py  config.py  database.py  embedder.py  exporter.py  keywords.py  models.py  pipeline.py  repository.py  reviewer.py  scoring.py  scraper.py
ikon/api/: __init__.py  app.py  dependencies.py  pdf_report.py  schemas.py
ikon/api/routers/: __init__.py  articles.py  feedback.py  health.py  keywords.py  runs.py
migrations/: v002_api_layer.sql  v003_fts_delete_race.sql  v004_keyword_profiles.sql  v005_cross_profile_keywords.sql  v006_tv2_hosts.sql
tests/: conftest.py  test_api_articles.py  test_api_feedback.py  test_api_keywords.py  test_api_runs.py  test_repository.py  test_scoring.py
