[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ikon-monitor"
version = "0.2.0"
description = "Heti média monitoring pipeline – IKO Műsorgyártó és kapcsolódó szervezetek"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
    "click>=8.1",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "httpx>=0.27",
]
ds = [
    "pyarrow>=14.0",   # Parquet export Jupyter notebookokhoz
    "jupyterlab>=4.0",
]

[project.scripts]
ikon     = "ikon.cli:cli"
ikon-api = "ikon.api.app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["ikon*"]
